--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-requests
-openai
-gradio
-loguru
-schedule
-markdown2
+schedule~=1.2.2
+markdown2~=2.5.0
+requests~=2.31.0
+openai~=1.44.0
+gradio~=4.44.1
+loguru~=0.7.2
+fastapi~=0.115.5
+uvicorn~=0.32.1
+beautifulsoup4~=4.12.3
