--- a/src/config.json
+++ b/src/config.json
@@ -15,8 +15,9 @@
     "llm": {
         "model_type": "ollama",
         "openai_model_name": "gpt-4o-mini",
-        "ollama_model_name": "llama3",
-        "ollama_api_url": "http://localhost:11434/api/chat"
+        "ollama_model_name": "llamafamily/llama3-chinese-8b-instruct:latest",
+        "ollama_api_url": "http://localhost:3000/api/chat/completions",
+        "ollama_api_key": ""
     },
     "report_types": ["github", "hacker_news"],
     "slack": {
