--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-requests
-openai
-gradio
-loguru
 schedule
 markdown2
+requests~=2.31.0
+openai~=1.44.0
+gradio~=4.44.1
+loguru~=0.7.2
+fastapi~=0.115.5
+uvicorn~=0.32.1
