--- a/src/config.json
+++ b/src/config.json
@@ -13,6 +13,8 @@
     "github_progress_execution_time":"08:00",
     "llm": {
         "model_type": "ollama",
+        "openai_token": "",
+        "openai_url": "",
         "openai_model_name": "gpt-4o-mini",
         "ollama_model_name": "llamafamily/llama3-chinese-8b-instruct:latest",
         "ollama_api_url": "http://localhost:3000/api/chat/completions",
