--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 schedule~=1.2.2
 markdown2~=2.5.0
 requests~=2.31.0
-openai~=1.44.0
+openai==1.44.1
 gradio~=4.44.1
 loguru~=0.7.2
 fastapi~=0.115.5
